deploy: 76949d9c11d58fca7e13b6e483fe5b7f8b9ea456

--- a/article/go/go-template/index.html
+++ b/article/go/go-template/index.html
@@ -495,6 +495,14 @@ shortcode
 <nav class=partials__sidebar__article>
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawsome/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawsome/thumbnail_hu1d18fa1c515742002d9fbc7177b77ebf_6131_192x108_fill_q75_h2_box_center_3.webp alt=HugoでFontawsomeを使う方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemTitle>
+HugoでFontawsomeを使う方法
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/search/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/search/thumbnail_hu7a253d997b511fbff22929f86311ed19_4626_192x108_fill_q75_h2_box_center_3.webp alt=Hugoに検索機能を追加しよう loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
@@ -523,14 +531,6 @@ Hugoを使い始めた人に捧げるTips11選
 <img src=https://hugo-theme-salt.okdyy75.com/article/go/go-template/thumbnail_hu2cc68145f3781b3dc807c5718be0f3c2_1960_192x108_fill_q75_h2_box_center_3.webp alt="Go言語Tips② Hugoで使われるlayoutの正体" loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
 Go言語Tips② Hugoで使われるlayoutの正体
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/go/variable/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/go/variable/thumbnail_hu9b587e2c909b0d2c1d0529e80b52e0ee_2906_192x108_fill_q75_h2_box_center_3.webp alt="Go言語Tips① 変数について" loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
-Go言語Tips① 変数について
 </div>
 </a>
 </li>
@@ -585,10 +585,10 @@ Hugoを使い始めた人に捧げるTips11選
 <nav class=partials__sidebar__category>
 <ul class=partials__sidebar__category__items>
 <li class=partials__sidebar__category__item>
-<a href=/categories/%e3%82%b5%e3%83%b3%e3%83%97%e3%83%ab class=partials__sidebar__category__itemLink>
+<a href=/categories/Hugo class=partials__sidebar__category__itemLink>
 <div>
 <i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
-サンプル
+Hugo
 </div>
 <div class=partials__sidebar__category__itemCount>
 4
@@ -596,13 +596,13 @@ Hugoを使い始めた人に捧げるTips11選
 </a>
 </li>
 <li class=partials__sidebar__category__item>
-<a href=/categories/Hugo class=partials__sidebar__category__itemLink>
+<a href=/categories/%e3%82%b5%e3%83%b3%e3%83%97%e3%83%ab class=partials__sidebar__category__itemLink>
 <div>
 <i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
-Hugo
+サンプル
 </div>
 <div class=partials__sidebar__category__itemCount>
-3
+4
 </div>
 </a>
 </li>
@@ -658,6 +658,11 @@ Go言語
 </a>
 </li>
 <li class=partials__tagList__item>
+<a href=/tags/Fontawsome class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>Fontawsome
+</a>
+</li>
+<li class=partials__tagList__item>
 <a href=/tags/go-template class=partials__tagList__itemLink>
 <i class="fas fa-tag partials__tagList__itemIcon"></i>go-template
 </a>
@@ -678,8 +683,18 @@ Go言語
 </a>
 </li>
 <li class=partials__tagList__item>
+<a href=/tags/%e3%82%a2%e3%82%a4%e3%82%b3%e3%83%b3 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>アイコン
+</a>
+</li>
+<li class=partials__tagList__item>
 <a href=/tags/%e3%83%9e%e3%83%bc%e3%82%af%e3%83%80%e3%82%a6%e3%83%b3 class=partials__tagList__itemLink>
 <i class="fas fa-tag partials__tagList__itemIcon"></i>マークダウン
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%e3%83%a9%e3%82%a4%e3%83%96%e3%83%a9%e3%83%aa class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>ライブラリ
 </a>
 </li>
 <li class=partials__tagList__item>
@@ -700,6 +715,11 @@ Go言語
 <div class=partials__sidebar__archive__yearItemTitle>2021年</div>
 <div class="archive-accordion-child-wrapper partials__sidebar__archive__monthListWrapper">
 <ul class="archive-accordion-child partials__sidebar__archive__monthList">
+<li class="archive-accordion-child partials__sidebar__archive__monthItem">
+<a href=/archives/2021%e5%b9%b412%e6%9c%88 class=partials__sidebar__archive__monthItemLink>
+2021年12月（1）
+</a>
+</li>
 <li class="archive-accordion-child partials__sidebar__archive__monthItem">
 <a href=/archives/2021%e5%b9%b410%e6%9c%88 class=partials__sidebar__archive__monthItemLink>
 2021年10月（1）
