--- a/article/hugo/search/index.html
+++ b/article/hugo/search/index.html
@@ -565,6 +565,32 @@ document.<span style=color:#a6e22e>addEventListener</span>(<span style=color:#e6
 <h3 class=single__relatedArticleList__title>関連記事</h3>
 <article class=partials__relatedArticle>
 <div class=partials__relatedArticle__inner>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/ class=partials__relatedArticle__link></a>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/thumbnail_hu5726299922efdf47da26d7ebb7472693_4871_576x324_fill_q75_h2_box_center_3.webp alt=Hugoでアーカイブを作る方法 loading=lazy class=partials__relatedArticle__thumbnail>
+<div class=partials__relatedArticle__content>
+<h4 class=partials__relatedArticle__title>
+Hugoでアーカイブを作る方法
+</h4>
+<ul class=partials__tagList>
+<li class=partials__tagList__item>
+<a href=/tags/%e3%82%a2%e3%83%bc%e3%82%ab%e3%82%a4%e3%83%96 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>アーカイブ
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/tips class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>tips
+</a>
+</li>
+</ul>
+<div class=partials__relatedArticle__description>
+Hugoでアーカイブを作るには2種類ほど方法があります ①タグやカテゴリと同様にタクソノミーを設定する config.ymlにarchiveを追加し taxonomies: archive: archives 記事のフロントマターに年月を設定してあげれば archives: ["2021年12月"] こんな感じのデータが作成されます。この時「yyyy年mm月」の形式でないと年月でソートされないので注意です {{ .Site.Taxonomies.archives.Alphabetical.Reverse }} [ {2021年12月 [WeightedPage(0,
+</div>
+</div>
+</div>
+</article>
+<article class=partials__relatedArticle>
+<div class=partials__relatedArticle__inner>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawsome/ class=partials__relatedArticle__link></a>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawsome/thumbnail_hu1d18fa1c515742002d9fbc7177b77ebf_6131_576x324_fill_q75_h2_box_center_3.webp alt=HugoでFontawsomeを使う方法 loading=lazy class=partials__relatedArticle__thumbnail>
 <div class=partials__relatedArticle__content>
@@ -595,32 +621,6 @@ HugoでFontawsomeを使う方法
 </ul>
 <div class=partials__relatedArticle__description>
 HugoにFontawsomeを使う場合はHugoの機能であるモジュールを使うと簡単に実現できます！ 1. npmでfontawsomeをインストール package.jsonがない場合はnpm initしてください npm install -D @fortawesome/fontawesome-free 2. config.ymlのmoduleに使いたいjsファイルをmounts 注意点としてmountすると、デフォルトであるtargetのルートディレクトリが無視されるので明示的に追加する必要
-</div>
-</div>
-</div>
-</article>
-<article class=partials__relatedArticle>
-<div class=partials__relatedArticle__inner>
-<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__relatedArticle__link></a>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_576x324_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__relatedArticle__thumbnail>
-<div class=partials__relatedArticle__content>
-<h4 class=partials__relatedArticle__title>
-Hugoを使い始めた人に捧げるTips11選
-</h4>
-<ul class=partials__tagList>
-<li class=partials__tagList__item>
-<a href=/tags/Hugo class=partials__tagList__itemLink>
-<i class="fas fa-tag partials__tagList__itemIcon"></i>Hugo
-</a>
-</li>
-<li class=partials__tagList__item>
-<a href=/tags/tips class=partials__tagList__itemLink>
-<i class="fas fa-tag partials__tagList__itemIcon"></i>tips
-</a>
-</li>
-</ul>
-<div class=partials__relatedArticle__description>
-1. とりあえずhugo server -Dって使ってるけどこれって何？ draft: trueのコンテンツファイルも含めて出力。 詳しくはhugo server --helpでチェック 2. taxonomyとtermの違い taxonomyは「タグ」や「カテゴリー」といった分類自体 termはそのタグやカテゴリーに属する「go」とか「tips」のことです こちらのサイトが非常に分かりやすいです！ https://maku77.github.io/hugo/taxonomy/basic.html 3. content配下の固定ページに共通のlayoutを使
 </div>
 </div>
 </div>
@@ -782,6 +782,14 @@ shortcode
 <nav class=partials__sidebar__article>
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/thumbnail_hu5726299922efdf47da26d7ebb7472693_4871_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでアーカイブを作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemTitle>
+Hugoでアーカイブを作る方法
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawsome/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawsome/thumbnail_hu1d18fa1c515742002d9fbc7177b77ebf_6131_192x108_fill_q75_h2_box_center_3.webp alt=HugoでFontawsomeを使う方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
@@ -810,14 +818,6 @@ Hugoブログテーマ「Salt」とは？
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
 Hugoを使い始めた人に捧げるTips11選
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/go/go-template/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/go/go-template/thumbnail_hu2cc68145f3781b3dc807c5718be0f3c2_1960_192x108_fill_q75_h2_box_center_3.webp alt="Go言語Tips② Hugoで使われるlayoutの正体" loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
-Go言語Tips② Hugoで使われるlayoutの正体
 </div>
 </a>
 </li>
@@ -878,7 +878,7 @@ Hugoを使い始めた人に捧げるTips11選
 Hugo
 </div>
 <div class=partials__sidebar__category__itemCount>
-4
+5
 </div>
 </a>
 </li>
@@ -975,6 +975,11 @@ Go言語
 </a>
 </li>
 <li class=partials__tagList__item>
+<a href=/tags/%e3%82%a2%e3%83%bc%e3%82%ab%e3%82%a4%e3%83%96 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>アーカイブ
+</a>
+</li>
+<li class=partials__tagList__item>
 <a href=/tags/%e3%83%9e%e3%83%bc%e3%82%af%e3%83%80%e3%82%a6%e3%83%b3 class=partials__tagList__itemLink>
 <i class="fas fa-tag partials__tagList__itemIcon"></i>マークダウン
 </a>
@@ -1004,7 +1009,7 @@ Go言語
 <ul class="archive-accordion-child partials__sidebar__archive__monthList">
 <li class="archive-accordion-child partials__sidebar__archive__monthItem">
 <a href=/archives/2021%e5%b9%b412%e6%9c%88 class=partials__sidebar__archive__monthItemLink>
-2021年12月（1）
+2021年12月（2）
 </a>
 </li>
 <li class="archive-accordion-child partials__sidebar__archive__monthItem">
