deploy: 550e932c21f1b6e5fbcbfeda8be36bfa7a946e6d

--- a/article/sample/markdown/index.html
+++ b/article/sample/markdown/index.html
@@ -546,8 +546,8 @@ Z
 <nav class=partials__sidebar__information>
 <a href=/information>
 <div>
-2021年8月31日
-サイトを作成しました
+2022年1月12日
+ランキングを追加しました
 </div>
 </a>
 </nav>
@@ -630,40 +630,50 @@ shortcode
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/thumbnail_hu5726299922efdf47da26d7ebb7472693_4871_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでアーカイブを作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line3>
 Hugoでアーカイブを作る方法
+</div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawsome/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawsome/thumbnail_hu1d18fa1c515742002d9fbc7177b77ebf_6131_192x108_fill_q75_h2_box_center_3.webp alt=HugoでFontawsomeを使う方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line3>
 HugoでFontawsomeを使う方法
+</div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/search/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/search/thumbnail_hu7a253d997b511fbff22929f86311ed19_4626_192x108_fill_q75_h2_box_center_3.webp alt=Hugoに検索機能を追加しよう loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line3>
 Hugoに検索機能を追加しよう
+</div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line3>
 Hugoブログテーマ「Salt」とは？
+</div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line3>
 Hugoを使い始めた人に捧げるTips11選
+</div>
 </div>
 </a>
 </li>
@@ -679,32 +689,114 @@ Hugoを使い始めた人に捧げるTips11選
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line3>
 Hugoブログテーマ「Salt」とは？
+</div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/custom-figure/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/salt/custom-figure/thumbnail_huabbb313cfc6fe0189548b2f94140ad9f_14559_192x108_fill_q75_h2_box_center_3.webp alt=画像のリサイズ・トリミング可能な自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line3>
 画像のリサイズ・トリミング可能な自作ショートコード
+</div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/thumbnail_hu887fde30b154802a30332967b448fbb6_8526_192x108_fill_q75_h2_box_center_3.webp alt=サイト内ブログカードを作る自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line3>
 サイト内ブログカードを作る自作ショートコード
+</div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line3>
 Hugoを使い始めた人に捧げるTips11選
+</div>
+</div>
+</a>
+</li>
+</ul>
+</nav>
+</div>
+<div class=partials__sidebar__card>
+<h3 class=partials__sidebar__title--ranking>
+ランキング
+</h3>
+<nav class=partials__sidebar__article>
+<ul class=partials__sidebar__article__items>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+Hugoブログテーマ「Salt」とは？
+</div>
+<div class=partials__sidebar__article__itemPv>
+14pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/thumbnail_hu5726299922efdf47da26d7ebb7472693_4871_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでアーカイブを作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+Hugoでアーカイブを作る方法
+</div>
+<div class=partials__sidebar__article__itemPv>
+11pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/salt/custom-figure/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/custom-figure/thumbnail_huabbb313cfc6fe0189548b2f94140ad9f_14559_192x108_fill_q75_h2_box_center_3.webp alt=画像のリサイズ・トリミング可能な自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+画像のリサイズ・トリミング可能な自作ショートコード
+</div>
+<div class=partials__sidebar__article__itemPv>
+8pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+Hugoを使い始めた人に捧げるTips11選
+</div>
+<div class=partials__sidebar__article__itemPv>
+6pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/thumbnail_hu887fde30b154802a30332967b448fbb6_8526_192x108_fill_q75_h2_box_center_3.webp alt=サイト内ブログカードを作る自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+サイト内ブログカードを作る自作ショートコード
+</div>
+<div class=partials__sidebar__article__itemPv>
+5pv
+</div>
 </div>
 </a>
 </li>
