deploy: 661075817bf20413a0dd0dcbd1b0c2b7f2c26fb2

--- a/pickups/top/index.html
+++ b/pickups/top/index.html
@@ -20,7 +20,7 @@
 <link rel=alternate type=application/rss+xml href=https://hugo-theme-salt.okdyy75.com/pickups/top/index.xml title=Hugoブログテーマ「Salt」>
 <link rel=preload href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as=style>
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.02016697d8489df8c900a8d5ba5c3d1110a560538eb17914afa1388d0ced9075.css>
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.ea1f619444627fd2d961ce752a740eb390f39cb9c5c592d78bb3026a711f1ac1.css>
 <link rel=preload href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css as=style>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5GBHW5M5"></script>
@@ -364,6 +364,16 @@ shortcode
 <nav class=partials__sidebar__article>
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/ranking/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/ranking/thumbnail_hue62fd672beaa75a2609baf58cf75dd4b_3561_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでランキングを作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line3>
+Hugoでランキングを作る方法
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/thumbnail_hu5726299922efdf47da26d7ebb7472693_4871_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでアーカイブを作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
@@ -399,16 +409,6 @@ Hugoに検索機能を追加しよう
 <div class=partials__sidebar__article__itemDetail>
 <div class=partials__sidebar__article__itemTitle--line3>
 Hugoブログテーマ「Salt」とは？
-</div>
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemDetail>
-<div class=partials__sidebar__article__itemTitle--line3>
-Hugoを使い始めた人に捧げるTips11選
 </div>
 </div>
 </a>
@@ -552,7 +552,7 @@ Hugoを使い始めた人に捧げるTips11選
 Hugo
 </div>
 <div class=partials__sidebar__category__itemCount>
-5
+6
 </div>
 </a>
 </li>
@@ -664,6 +664,11 @@ Go言語
 </a>
 </li>
 <li class=partials__tagList__item>
+<a href=/tags/%e3%83%a9%e3%83%b3%e3%82%ad%e3%83%b3%e3%82%b0 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>ランキング
+</a>
+</li>
+<li class=partials__tagList__item>
 <a href=/tags/%e6%a4%9c%e7%b4%a2 class=partials__tagList__itemLink>
 <i class="fas fa-tag partials__tagList__itemIcon"></i>検索
 </a>
@@ -677,6 +682,18 @@ Go言語
 </h3>
 <nav class=partials__sidebar__archive>
 <ul class=partials__sidebar__archive__yearList>
+<li class="close archive-accordion partials__sidebar__archive__yearItem">
+<div class=partials__sidebar__archive__yearItemTitle>2022年</div>
+<div class="archive-accordion-child-wrapper partials__sidebar__archive__monthListWrapper">
+<ul class="archive-accordion-child partials__sidebar__archive__monthList">
+<li class="archive-accordion-child partials__sidebar__archive__monthItem">
+<a href=/archives/2022%e5%b9%b41%e6%9c%88 class=partials__sidebar__archive__monthItemLink>
+2022年1月（1）
+</a>
+</li>
+</ul>
+</div>
+</li>
 <li class="close archive-accordion partials__sidebar__archive__yearItem">
 <div class=partials__sidebar__archive__yearItemTitle>2021年</div>
 <div class="archive-accordion-child-wrapper partials__sidebar__archive__monthListWrapper">
