deploy: bfe66d13f7d24aa3a0e0b92dbd088704583a8f25

--- a/article/go/variable/index.html
+++ b/article/go/variable/index.html
@@ -597,20 +597,20 @@ Hugoを使い始めた人に捧げるTips11選
 Hugoブログテーマ「Salt」とは？
 </div>
 <div class=partials__sidebar__article__itemPv>
-14pv
+22pv
 </div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/thumbnail_hu5726299922efdf47da26d7ebb7472693_4871_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでアーカイブを作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<a href=https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/thumbnail_hu3e76b4d1d3cd4901770e54ca242e78fa_5891_192x108_fill_q75_h2_box_center_3.webp alt=Hugo標準のショートコード表示サンプル loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
 <div class=partials__sidebar__article__itemTitle--line2>
-Hugoでアーカイブを作る方法
+Hugo標準のショートコード表示サンプル
 </div>
 <div class=partials__sidebar__article__itemPv>
-11pv
+16pv
 </div>
 </div>
 </a>
@@ -623,7 +623,7 @@ Hugoでアーカイブを作る方法
 画像のリサイズ・トリミング可能な自作ショートコード
 </div>
 <div class=partials__sidebar__article__itemPv>
-8pv
+15pv
 </div>
 </div>
 </a>
@@ -636,20 +636,20 @@ Hugoでアーカイブを作る方法
 Hugoを使い始めた人に捧げるTips11選
 </div>
 <div class=partials__sidebar__article__itemPv>
-6pv
+13pv
 </div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/thumbnail_hu887fde30b154802a30332967b448fbb6_8526_192x108_fill_q75_h2_box_center_3.webp alt=サイト内ブログカードを作る自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/thumbnail_hu5726299922efdf47da26d7ebb7472693_4871_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでアーカイブを作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
 <div class=partials__sidebar__article__itemTitle--line2>
-サイト内ブログカードを作る自作ショートコード
+Hugoでアーカイブを作る方法
 </div>
 <div class=partials__sidebar__article__itemPv>
-5pv
+12pv
 </div>
 </div>
 </a>
