deploy: 254073d15205c8c53b638b129c45c4e9da1279db

--- a/pickups/top/index.html
+++ b/pickups/top/index.html
@@ -23,8 +23,6 @@
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.ea1f619444627fd2d961ce752a740eb390f39cb9c5c592d78bb3026a711f1ac1.css>
 <link rel=preload href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css as=style>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5GBHW5M5"></script>
-<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-LR5GBHW5M5',{anonymize_ip:!1})}</script>
 </head>
 <body class=body>
 <div class=container>
@@ -745,5 +743,6 @@ Powered by <a href=https://gohugo.io/ target=_blank>Hugo</a> | Hugo Theme Salt
 <div id=overlay class="close overlay"></div>
 <script>window.addEventListener('DOMContentLoaded',a=>{document.querySelector('#headerBlock').style.height=document.querySelector('.header').offsetHeight+'px'})</script>
 <script>document.querySelectorAll('#hamburger, #overlay').forEach(a=>{a.addEventListener('click',function(a){document.querySelector('#hamburger').classList.toggle('open'),document.querySelector('#hamburger').classList.toggle('close'),document.querySelector('#hamburgerMenu').classList.toggle('open'),document.querySelector('#hamburgerMenu').classList.toggle('close'),document.querySelector('#overlay').classList.toggle('open'),document.querySelector('#overlay').classList.toggle('close')})})</script>
+<script>let isLoaded=!1;window.addEventListener("scroll",function(){if(isLoaded)return;(document.documentElement.scrollTop!=0||document.body.scrollTop!=0)&&(function(){const b="ca-pub-9459277760652211";let a=document.createElement("script");a.type="text/javascript",a.crossorigin="anonymous",a.async=!0,a.src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client="+b,document.body.appendChild(a)}(),function(){const b="G-LR5GBHW5M5";let a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src="https://www.googletagmanager.com/gtag/js?id="+b,document.body.appendChild(a),window.dataLayer=window.dataLayer||[];function c(){dataLayer.push(arguments)}c("js",new Date),c("config",b)}(),isLoaded=!0)},!0)</script>
 </body>
 </html>
