--- a/404.html
+++ b/404.html
@@ -22,8 +22,6 @@
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.ea1f619444627fd2d961ce752a740eb390f39cb9c5c592d78bb3026a711f1ac1.css>
 <link rel=preload href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css as=style>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5GBHW5M5"></script>
-<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-LR5GBHW5M5',{anonymize_ip:!1})}</script>
 </head>
 <body class=body>
 <div class=container>
@@ -411,33 +409,7 @@ Hugoを使い始めた人に捧げるTips11選
 Hugoブログテーマ「Salt」とは？
 </div>
 <div class=partials__sidebar__article__itemPv>
-18pv
-</div>
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/thumbnail_hu3e76b4d1d3cd4901770e54ca242e78fa_5891_192x108_fill_q75_h2_box_center_3.webp alt=Hugo標準のショートコード表示サンプル loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemDetail>
-<div class=partials__sidebar__article__itemTitle--line2>
-Hugo標準のショートコード表示サンプル
-</div>
-<div class=partials__sidebar__article__itemPv>
-15pv
-</div>
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/salt/custom-figure/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/custom-figure/thumbnail_huabbb313cfc6fe0189548b2f94140ad9f_14559_192x108_fill_q75_h2_box_center_3.webp alt=画像のリサイズ・トリミング可能な自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemDetail>
-<div class=partials__sidebar__article__itemTitle--line2>
-画像のリサイズ・トリミング可能な自作ショートコード
-</div>
-<div class=partials__sidebar__article__itemPv>
-12pv
+7pv
 </div>
 </div>
 </a>
@@ -450,20 +422,46 @@ Hugo標準のショートコード表示サンプル
 Hugoを使い始めた人に捧げるTips11選
 </div>
 <div class=partials__sidebar__article__itemPv>
-10pv
+5pv
 </div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/thumbnail_hu887fde30b154802a30332967b448fbb6_8526_192x108_fill_q75_h2_box_center_3.webp alt=サイト内ブログカードを作る自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
+<a href=https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/thumbnail_hu3e76b4d1d3cd4901770e54ca242e78fa_5891_192x108_fill_q75_h2_box_center_3.webp alt=Hugo標準のショートコード表示サンプル loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
 <div class=partials__sidebar__article__itemTitle--line2>
-サイト内ブログカードを作る自作ショートコード
+Hugo標準のショートコード表示サンプル
 </div>
 <div class=partials__sidebar__article__itemPv>
-9pv
+4pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/about/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/about/thumbnail_hu3631644e14d4f47f03ef96281b561b50_4022_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでできること loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+Hugoでできること
+</div>
+<div class=partials__sidebar__article__itemPv>
+3pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/search/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/search/thumbnail_hu7a253d997b511fbff22929f86311ed19_4626_192x108_fill_q75_h2_box_center_3.webp alt=Hugoに検索機能を追加しよう loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+Hugoに検索機能を追加しよう
+</div>
+<div class=partials__sidebar__article__itemPv>
+3pv
 </div>
 </div>
 </a>
@@ -677,5 +675,6 @@ Powered by <a href=https://gohugo.io/ target=_blank>Hugo</a> | Hugo Theme Salt
 <div id=overlay class="close overlay"></div>
 <script>window.addEventListener('DOMContentLoaded',a=>{document.querySelector('#headerBlock').style.height=document.querySelector('.header').offsetHeight+'px'})</script>
 <script>document.querySelectorAll('#hamburger, #overlay').forEach(a=>{a.addEventListener('click',function(a){document.querySelector('#hamburger').classList.toggle('open'),document.querySelector('#hamburger').classList.toggle('close'),document.querySelector('#hamburgerMenu').classList.toggle('open'),document.querySelector('#hamburgerMenu').classList.toggle('close'),document.querySelector('#overlay').classList.toggle('open'),document.querySelector('#overlay').classList.toggle('close')})})</script>
+<script>let isLoaded=!1;window.addEventListener("scroll",function(){if(isLoaded)return;(document.documentElement.scrollTop!=0||document.body.scrollTop!=0)&&(function(){const b="ca-pub-9459277760652211";let a=document.createElement("script");a.type="text/javascript",a.crossorigin="anonymous",a.async=!0,a.src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client="+b,document.body.appendChild(a)}(),function(){const b="G-LR5GBHW5M5";let a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src="https://www.googletagmanager.com/gtag/js?id="+b,document.body.appendChild(a),window.dataLayer=window.dataLayer||[];function c(){dataLayer.push(arguments)}c("js",new Date),c("config",b)}(),isLoaded=!0)},!0)</script>
 </body>
 </html>
