deploy: c5d42ea06f3fb8da0cf2d26b4de4dba972d9631d

--- a/pickups/sidebar/index.html
+++ b/pickups/sidebar/index.html
@@ -20,7 +20,7 @@
 <link rel=alternate type=application/rss+xml href=https://hugo-theme-salt.okdyy75.com/pickups/sidebar/index.xml title=Hugoブログテーマ「Salt」>
 <link rel=preload href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as=style>
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" media=print onload="this.media='all'">
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.ea1f619444627fd2d961ce752a740eb390f39cb9c5c592d78bb3026a711f1ac1.css>
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.94b617792b21e86cd36867027417806f8593719092b6c7e5e126fea8eaf03409.css>
 <link rel=preload href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css as=style>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
 </head>
@@ -536,19 +536,6 @@ Hugoを使い始めた人に捧げるTips11選
 <nav class=partials__sidebar__article>
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/search/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/search/thumbnail_hu7a253d997b511fbff22929f86311ed19_4626_192x108_fill_q75_h2_box_center_3.webp alt=Hugoに検索機能を追加しよう loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemDetail>
-<div class=partials__sidebar__article__itemTitle--line2>
-Hugoに検索機能を追加しよう
-</div>
-<div class=partials__sidebar__article__itemPv>
-24pv
-</div>
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
@@ -556,20 +543,7 @@ Hugoに検索機能を追加しよう
 Hugoブログテーマ「Salt」とは？
 </div>
 <div class=partials__sidebar__article__itemPv>
-8pv
-</div>
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/about/thumbnail_hu3631644e14d4f47f03ef96281b561b50_4022_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでできること loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemDetail>
-<div class=partials__sidebar__article__itemTitle--line2>
-Hugoでできること
-</div>
-<div class=partials__sidebar__article__itemPv>
-5pv
+13pv
 </div>
 </div>
 </a>
@@ -582,7 +556,33 @@ Hugoでできること
 Hugoを使い始めた人に捧げるTips11選
 </div>
 <div class=partials__sidebar__article__itemPv>
+6pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/thumbnail_hu887fde30b154802a30332967b448fbb6_8526_192x108_fill_q75_h2_box_center_3.webp alt=サイト内ブログカードを作る自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+サイト内ブログカードを作る自作ショートコード
+</div>
+<div class=partials__sidebar__article__itemPv>
 5pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/search/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/search/thumbnail_hu7a253d997b511fbff22929f86311ed19_4626_192x108_fill_q75_h2_box_center_3.webp alt=Hugoに検索機能を追加しよう loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+Hugoに検索機能を追加しよう
+</div>
+<div class=partials__sidebar__article__itemPv>
+4pv
 </div>
 </div>
 </a>
@@ -595,7 +595,7 @@ Hugoを使い始めた人に捧げるTips11選
 Hugo標準のショートコード表示サンプル
 </div>
 <div class=partials__sidebar__article__itemPv>
-2pv
+4pv
 </div>
 </div>
 </a>
